--- a/obrt.html
+++ b/obrt.html
@@ -25,7 +25,7 @@
         Osim toga, obrt se bavi izradom keramičkih umivaonika, <br>
         kombinujući funkcionalnost i estetiku kako bi se postigla savršena rješenja za svaki prostor.<br>
     </label>
-    <label id="downbelow">Primjeri rada GO HARI:</label>
+    <label id="downbelow">Neki od radova GO Hari:</label>
     
     <div id="images-container">
         <img src="thirdimage.jpg" id="thirdimagee">
